--- a/styles/main.css
+++ b/styles/main.css
@@ -2,7 +2,7 @@
 body {
   font-family: "Mulish", sans-serif;
   color: #111111;
-  font-size: rem(16px);
+  font-size: 1rem;
   font-weight: 400;
 }
 
@@ -18,23 +18,23 @@ h2, h3, h4, h5, h6 {
 }
 
 h2 {
-  font-size: rem(40px);
+  font-size: 2.5rem;
 }
 
 h3 {
-  font-size: rem(28px);
+  font-size: 1.75rem;
 }
 
 h4 {
-  font-size: rem(22px);
+  font-size: 1.375rem;
 }
 
 h5 {
-  font-size: rem(18px);
+  font-size: 1.125rem;
 }
 
 h6 {
-  font-size: rem(18px);
+  font-size: 1.125rem;
   color: #979797;
 }
 
@@ -43,12 +43,17 @@ h6 {
   color: #4A4FF2;
 }
 
-header {
+i {
+  padding-left: 1.4375rem;
+}
+
+header, footer {
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: baseline;
   padding-top: 3%;
+  padding-bottom: 3%;
 }
 
 .nav_wrapper {
@@ -58,11 +63,18 @@ header {
 
 nav ul {
   list-style-type: none;
+  text-align: right;
 }
 
 nav li {
   display: inline;
-  padding-left: 3%;
+  font-weight: bold;
+  padding-left: 5%;
+}
+
+.socials {
+  text-align: right;
+  width: 20%;
 }
 
 * {
