Added gallery grid to index

--- a/styles/index.css
+++ b/styles/index.css
@@ -38,6 +38,14 @@ h6 {
   color: #979797;
 }
 
+.layout_title, .job_title {
+  color: #4A4FF2;
+}
+
+.layout_title {
+  font-weight: bold;
+}
+
 .intro {
   display: flex;
   flex-wrap: nowrap;
@@ -60,7 +68,7 @@ h6 {
   padding-bottom: 3%;
 }
 
-.intro__tagline:before {
+.intro__tagline::before {
   border-top: 1px solid #888;
   content: "";
   display: block;
@@ -69,11 +77,67 @@ h6 {
   padding-bottom: 3%;
 }
 
-.layout_title, .job_title {
-  color: #4A4FF2;
+.gallery_grid {
+  display: grid;
+  grid-template-rows: repeat(32);
+  grid-template-columns: repeat(9, 1fr);
+  grid-gap: 1rem;
+  margin: auto;
+  min-width: 22.3125rem;
+  min-height: auto;
 }
 
-.layout_title {
-  font-weight: bold;
+.gallery_grid img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.gallery_grid__zero {
+  grid-area: 1 / 1 / 7 / 4;
+}
+
+.gallery_grid__first {
+  grid-area: 7 / 1 / 15 / 4;
+}
+
+.gallery_grid__second {
+  grid-area: 15 / 1 / 23 / 4;
+}
+
+.gallery_grid__third {
+  grid-area: 23 / 1 / 32 / 4;
+}
+
+.gallery_grid__fourth {
+  grid-area: 1 / 4 / 6 / 7;
+}
+
+.gallery_grid__fifth {
+  grid-area: 6 / 4 / 13 / 7;
+}
+
+.gallery_grid__sixth {
+  grid-area: 13 / 4 / 22 / 7;
+}
+
+.gallery_grid__seventh {
+  grid-area: 22 / 4 / 32 / 7;
+}
+
+.gallery_grid__eighth {
+  grid-area: 1 / 7 / 10 / 10;
+}
+
+.gallery_grid__ninth {
+  grid-area: 10 / 7 / 17 / 10;
+}
+
+.gallery_grid__tenth {
+  grid-area: 17 / 7 / 26 / 10;
+}
+
+.gallery_grid__eleventh {
+  grid-area: 26 / 7 / 32 / 10;
 }
 /*# sourceMappingURL=index.css.map */
