--- a/styles/index.css
+++ b/styles/index.css
@@ -15,6 +15,7 @@ h2, h3, h4, h5, h6 {
   font-family: "Mulish", sans-serif;
   font-weight: 700;
   color: #111111;
+  margin-top: 0;
 }
 
 h2 {
@@ -31,11 +32,6 @@ h4 {
 
 h5 {
   font-size: 1.125rem;
-}
-
-h6 {
-  font-size: 1.125rem;
-  color: #979797;
 }
 
 header, footer {
@@ -64,6 +60,7 @@ nav li {
 }
 
 footer {
+  padding-top: 10%;
   bottom: 0;
 }
 
@@ -84,25 +81,12 @@ body {
   max-width: 90%;
 }
 
-.layout_title, .job_title {
-  color: #4A4FF2;
-}
-
-.layout_title {
-  font-weight: bold;
-}
-
 .intro {
   display: flex;
   justify-content: space-between;
   flex-wrap: nowrap;
-  align-items: flex-end;
   padding-top: 3%;
   padding-bottom: 3%;
-}
-
-.intro__statement {
-  width: 59%;
 }
 
 .intro__tagline {
@@ -121,14 +105,20 @@ body {
   padding-bottom: 3%;
 }
 
+.layout_title, .job_title {
+  color: #4A4FF2;
+}
+
+.layout_title {
+  font-weight: bold;
+}
+
 .gallery_grid {
   display: grid;
   grid-template-rows: repeat(32);
   grid-template-columns: repeat(9, 1fr);
   grid-gap: 1rem;
-  margin: auto;
   min-width: 22.3125rem;
-  min-height: auto;
 }
 
 .gallery_grid img {
