--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;600;700&display=swap");
 body {
   font-family: "Mulish", sans-serif;
   font-weight: 200;
@@ -89,10 +90,6 @@ body {
   padding-bottom: 3%;
 }
 
-.intro__statement {
-  max-width: 59%;
-}
-
 .intro__tagline {
   width: max-content;
   display: table;
@@ -108,4 +105,66 @@ body {
   width: 15%;
   padding-bottom: 3%;
 }
-/*# sourceMappingURL=main.css.map */
+
+body {
+  font-family: "Mulish", sans-serif;
+  font-weight: 200;
+  color: #111111;
+  font-size: 1rem;
+}
+
+a {
+  text-decoration: none;
+  color: #111111;
+}
+
+h2, h3, h4, h5, h6 {
+  font-family: "Mulish", sans-serif;
+  font-weight: 700;
+  color: #111111;
+  margin-top: 0;
+}
+
+h2 {
+  font-size: 2.5rem;
+}
+
+h3 {
+  font-size: 1.75rem;
+}
+
+h4 {
+  font-size: 1.375rem;
+}
+
+h5 {
+  font-size: 1.125rem;
+}
+
+.project_stats {
+  display: table;
+  width: 25%;
+  border-collapse: collapse;
+}
+
+.project_stats tr {
+  border-bottom: 2px solid #D8D8D8;
+}
+
+.project_stats td:nth-child(odd) {
+  font-size: 1.125rem;
+  color: #979797;
+  font-weight: bold;
+}
+
+.project_stats td:nth-child(even) {
+  font-size: 1.125rem;
+  color: #111111;
+  font-weight: bold;
+}
+
+.project_stats td {
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+/*# sourceMappingURL=projects.css.map */
