--- a/styles/_margins.scss
+++ b/styles/_margins.scss
@@ -4,11 +4,13 @@
 
 header, footer {
     display: flex;
+    flex-grow:1;
     flex-wrap: nowrap;
-    justify-content: space-between;
-    align-items: baseline;
+    justify-content: space-evenly;
+    align-items: center;
     padding-top: 3%;
     padding-bottom: 3%;
+    min-width: rem(1110px);
 }
 
 .nav_wrapper {
