--- a/styles/main.css
+++ b/styles/main.css
@@ -15,7 +15,6 @@ h2, h3, h4, h5, h6 {
   font-family: "Mulish", sans-serif;
   font-weight: 700;
   color: #111111;
-  margin-top: 0;
 }
 
 h2 {
@@ -36,11 +35,13 @@ h5 {
 
 header, footer {
   display: flex;
+  flex-grow: 1;
   flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: baseline;
+  justify-content: space-evenly;
+  align-items: center;
   padding-top: 3%;
   padding-bottom: 3%;
+  min-width: 69.375rem;
 }
 
 .nav_wrapper {
@@ -78,7 +79,11 @@ body {
   margin: auto;
   height: 100vh;
   width: 100vw;
-  max-width: 90%;
+  display: flex;
+  align-items: flex-start;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: min-content;
 }
 
 .intro {
@@ -95,9 +100,9 @@ body {
 
 .intro__tagline {
   width: max-content;
-  display: table;
   font-size: 1.125rem;
-  padding-bottom: 3%;
+  display: flex;
+  align-self: flex-end;
 }
 
 .intro__tagline::before {
