--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -9,7 +9,7 @@ h2 {
 
 .project_stats {
     display: table;
-    width: 25%;
+    width: 31%;
     border-collapse: collapse;
 
     tr {
@@ -25,17 +25,18 @@ h2 {
     }
 
     td {
-        padding-top: 5%;
-        padding-bottom: 5%;
+        padding: 5%;
+        padding-left: 0;
     }
 }
 
 .project_showcase {
     width: 100%;
     display: flex;
-    justify-content: center;  
+    flex-wrap: wrap;
+    justify-content: space-between;  
     
     &__hero {
-        object-fit: cover;
+        padding-bottom: 3%;
     }
 }
