--- a/styles/index.css
+++ b/styles/index.css
@@ -29,10 +29,6 @@ h4 {
   font-size: 1.375rem;
 }
 
-h5 {
-  font-size: 1.125rem;
-}
-
 header, footer {
   display: flex;
   flex-grow: 1;
@@ -100,9 +96,9 @@ body {
 
 .intro__tagline {
   width: max-content;
-  display: table;
   font-size: 1.125rem;
-  padding-bottom: 3%;
+  display: flex;
+  align-self: flex-end;
 }
 
 .intro__tagline::before {
