--- a/styles/index.css
+++ b/styles/index.css
@@ -1,250 +1,2 @@
-@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;600;700&display=swap");
-body {
-  font-family: "Mulish", sans-serif;
-  font-weight: 200;
-  color: #111111;
-  font-size: 1rem;
-}
-
-a {
-  text-decoration: none;
-  color: #111111;
-}
-
-h2, h3, h4, h5, h6 {
-  font-family: "Mulish", sans-serif;
-  font-weight: 700;
-  color: #111111;
-}
-
-h2 {
-  font-size: 2.5rem;
-}
-
-h3 {
-  font-size: 1.75rem;
-}
-
-h4 {
-  font-size: 1.375rem;
-}
-
-header, footer {
-  display: flex;
-  flex-grow: 1;
-  flex-wrap: nowrap;
-  justify-content: space-evenly;
-  align-items: center;
-  padding-top: 3%;
-  padding-bottom: 3%;
-  min-width: 69.375rem;
-}
-
-.nav_wrapper {
-  flex-grow: 1;
-  text-align: right;
-}
-
-nav ul {
-  list-style-type: none;
-  text-align: right;
-}
-
-nav li {
-  display: inline;
-  font-weight: bold;
-  padding-left: 5%;
-}
-
-footer {
-  padding-top: 10%;
-  bottom: 0;
-}
-
-.socials {
-  text-align: right;
-  width: 20%;
-}
-
-i {
-  padding-left: 1.4375rem;
-}
-
-body {
-  background-color: #F2F2F2;
-  margin: auto;
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  align-items: flex-start;
-  flex-direction: row;
-  flex-wrap: wrap;
-  max-width: min-content;
-}
-
-.intro {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-  padding-top: 3%;
-  padding-bottom: 3%;
-}
-
-.intro__statement {
-  max-width: 59%;
-}
-
-.intro__tagline {
-  width: max-content;
-  font-size: 1.125rem;
-  display: flex;
-  align-self: flex-end;
-}
-
-.intro__tagline::before {
-  border-top: 1px solid #888;
-  content: "";
-  display: block;
-  height: 100%;
-  width: 15%;
-  padding-bottom: 3%;
-}
-
-.layout_title, .job_title {
-  color: #4A4FF2;
-}
-
-.layout_title {
-  font-weight: bold;
-}
-
-.gallery_grid {
-  display: grid;
-  max-width: 69.375rem;
-  grid-template-rows: repeat(32);
-  grid-template-columns: repeat(9, 1fr);
-  grid-gap: 1rem;
-  min-width: 22.3125rem;
-}
-
-.gallery_grid img {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-}
-
-.gallery_grid__zero {
-  grid-area: 1 / 1 / 7 / 4;
-}
-
-.gallery_grid__first {
-  grid-area: 7 / 1 / 15 / 4;
-}
-
-.gallery_grid__second {
-  grid-area: 15 / 1 / 23 / 4;
-}
-
-.gallery_grid__third {
-  grid-area: 23 / 1 / 32 / 4;
-}
-
-.gallery_grid__fourth {
-  grid-area: 1 / 4 / 6 / 7;
-}
-
-.gallery_grid__fifth {
-  grid-area: 6 / 4 / 13 / 7;
-}
-
-.gallery_grid__sixth {
-  grid-area: 13 / 4 / 22 / 7;
-}
-
-.gallery_grid__seventh {
-  grid-area: 22 / 4 / 32 / 7;
-}
-
-.gallery_grid__eighth {
-  grid-area: 1 / 7 / 10 / 10;
-}
-
-.gallery_grid__ninth {
-  grid-area: 10 / 7 / 17 / 10;
-}
-
-.gallery_grid__tenth {
-  grid-area: 17 / 7 / 26 / 10;
-}
-
-.gallery_grid__eleventh {
-  grid-area: 26 / 7 / 32 / 10;
-}
-
-.services {
-  display: flex;
-  justify-content: space-between;
-  padding-bottom: 3%;
-}
-
-.services__description {
-  width: 50%;
-}
-
-.services__list {
-  width: 40%;
-}
-
-.services__list ul {
-  list-style-type: none;
-  columns: 2;
-  padding-left: 3%;
-  padding-top: 2%;
-}
-
-.services__list li {
-  padding: 4%;
-}
-
-.awards_list {
-  border-top: 2px solid #D8D8D8;
-}
-
-.awards {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  border-bottom: 2px solid #D8D8D8;
-  padding-top: 3%;
-}
-
-.awards__giver {
-  height: 100%;
-}
-
-.awards_box {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  flex-grow: 1;
-  max-width: 55%;
-}
-
-.awards_box .entry {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-}
-
-.awards_box > * {
-  padding-bottom: 5%;
-}
-
-.awards_box .app_name {
-  font-weight: 700;
-}
-
-.awards_box__project {
-  max-width: 20%;
-}
+@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;600;700&display=swap");body{font-family:"Mulish",sans-serif;font-weight:200;color:#111;font-size:1rem}a{text-decoration:none;color:#111}h2,h3,h4,h5,h6{font-family:"Mulish",sans-serif;font-weight:700;color:#111}h2{font-size:2.5rem}h3{font-size:1.75rem}h4{font-size:1.375rem}header,footer{display:flex;flex-grow:1;flex-wrap:nowrap;justify-content:space-evenly;align-items:center;padding-top:3%;padding-bottom:3%;min-width:69.375rem}.nav_wrapper{flex-grow:1;text-align:right}nav ul{list-style-type:none;text-align:right}nav li{display:inline;font-weight:bold;padding-left:5%}footer{padding-top:10%;bottom:0}.socials{text-align:right;width:20%}i{padding-left:1.4375rem}body{margin:auto;height:100vh;width:100vw;display:flex;align-items:flex-start;flex-direction:row;flex-wrap:wrap;max-width:min-content;background-color:#F2F2F2}.intro{display:flex;justify-content:space-between;padding-bottom:5%}.intro__statement{max-width:59%}.intro__tagline{align-self:flex-end;font-style:italic}.intro__tagline::before{border-top:1px solid #979797;content:"";display:block;height:100%;width:15%;padding-bottom:3%}.layout_title,.job_title{color:#4A4FF2}.layout_title{font-weight:bold}.gallery_grid{display:grid;max-width:69.375rem;grid-template-rows:repeat(32);grid-template-columns:repeat(9, 1fr);grid-gap:1rem;min-width:22.3125rem}.gallery_grid img{height:100%;width:100%;object-fit:cover}.gallery_grid__zero{grid-area:1 / 1 / 7 / 4}.gallery_grid__first{grid-area:7 / 1 / 15 / 4}.gallery_grid__second{grid-area:15 / 1 / 23 / 4}.gallery_grid__third{grid-area:23 / 1 / 32 / 4}.gallery_grid__fourth{grid-area:1 / 4 / 6 / 7}.gallery_grid__fifth{grid-area:6 / 4 / 13 / 7}.gallery_grid__sixth{grid-area:13 / 4 / 22 / 7}.gallery_grid__seventh{grid-area:22 / 4 / 32 / 7}.gallery_grid__eighth{grid-area:1 / 7 / 10 / 10}.gallery_grid__ninth{grid-area:10 / 7 / 17 / 10}.gallery_grid__tenth{grid-area:17 / 7 / 26 / 10}.gallery_grid__eleventh{grid-area:26 / 7 / 32 / 10}.services{display:flex;justify-content:space-between;padding-bottom:3%}.services__description{width:50%}.services__list{width:40%}.services__list ul{list-style-type:none;columns:2;padding-left:3%;padding-top:2%}.services__list li{padding:4%}.awards_list{border-top:2px solid #D8D8D8}.awards{display:flex;justify-content:space-between;align-items:flex-start;border-bottom:2px solid #D8D8D8}.awards__giver{margin-top:0}.awards_box{display:flex;justify-content:space-between;flex-direction:column;flex-grow:1;max-width:55%}.awards_box .entry{display:flex;justify-content:space-between;align-items:baseline}.awards_box>*{padding-bottom:5%;padding-top:3%}.awards_box .app_name{font-weight:700}.awards_box__project{max-width:20%}
 /*# sourceMappingURL=index.css.map */
