--- a/styles/main.css
+++ b/styles/main.css
@@ -1,112 +1,2 @@
-@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;600;700&display=swap");
-body {
-  font-family: "Mulish", sans-serif;
-  font-weight: 200;
-  color: #111111;
-  font-size: 1rem;
-}
-
-a {
-  text-decoration: none;
-  color: #111111;
-}
-
-h2, h3, h4, h5, h6 {
-  font-family: "Mulish", sans-serif;
-  font-weight: 700;
-  color: #111111;
-}
-
-h2 {
-  font-size: 2.5rem;
-}
-
-h3 {
-  font-size: 1.75rem;
-}
-
-h4 {
-  font-size: 1.375rem;
-}
-
-header, footer {
-  display: flex;
-  flex-grow: 1;
-  flex-wrap: nowrap;
-  justify-content: space-evenly;
-  align-items: center;
-  padding-top: 3%;
-  padding-bottom: 3%;
-  min-width: 69.375rem;
-}
-
-.nav_wrapper {
-  flex-grow: 1;
-  text-align: right;
-}
-
-nav ul {
-  list-style-type: none;
-  text-align: right;
-}
-
-nav li {
-  display: inline;
-  font-weight: bold;
-  padding-left: 5%;
-}
-
-footer {
-  padding-top: 10%;
-  bottom: 0;
-}
-
-.socials {
-  text-align: right;
-  width: 20%;
-}
-
-i {
-  padding-left: 1.4375rem;
-}
-
-body {
-  background-color: #F2F2F2;
-  margin: auto;
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  align-items: flex-start;
-  flex-direction: row;
-  flex-wrap: wrap;
-  max-width: min-content;
-}
-
-.intro {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-  padding-top: 3%;
-  padding-bottom: 3%;
-}
-
-.intro__statement {
-  max-width: 59%;
-}
-
-.intro__tagline {
-  width: max-content;
-  font-size: 1.125rem;
-  display: flex;
-  align-self: flex-end;
-}
-
-.intro__tagline::before {
-  border-top: 1px solid #888;
-  content: "";
-  display: block;
-  height: 100%;
-  width: 15%;
-  padding-bottom: 3%;
-}
+@import url("https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;600;700&display=swap");body{font-family:"Mulish",sans-serif;font-weight:200;color:#111;font-size:1rem}a{text-decoration:none;color:#111}h2,h3,h4,h5,h6{font-family:"Mulish",sans-serif;font-weight:700;color:#111}h2{font-size:2.5rem}h3{font-size:1.75rem}h4{font-size:1.375rem}header,footer{display:flex;flex-grow:1;flex-wrap:nowrap;justify-content:space-evenly;align-items:center;padding-top:3%;padding-bottom:3%;min-width:69.375rem}.nav_wrapper{flex-grow:1;text-align:right}nav ul{list-style-type:none;text-align:right}nav li{display:inline;font-weight:bold;padding-left:5%}footer{padding-top:10%;bottom:0}.socials{text-align:right;width:20%}i{padding-left:1.4375rem}body{margin:auto;height:100vh;width:100vw;display:flex;align-items:flex-start;flex-direction:row;flex-wrap:wrap;max-width:min-content;background-color:#F2F2F2}.intro{display:flex;justify-content:space-between}.intro__statement{max-width:59%}
 /*# sourceMappingURL=main.css.map */
